# libfootprints

./: .gitignore  .gitmodules  Makefile.am  configure.ac  libfootprints.pc.in
include/: footprints.h  footprints_enums.h  footprints_funcs.h  footprints_types.h  perform_syscall.h
src/: binary_ops.c  control_flow.c  eval.c  exprs.c  footprints.c  idents.c  objects.c  parser.c  perform_syscall.c  printer.c  subscripts.c  syscall_names.c  test_footprints.c  test_syscalls.c  unary_ops.c  unions.c  values.c
src/ocaml/: Makefile  ocaml_test_syscalls.ml  syscalls.ml
